# Newsletter-Copa-do-Mundo-2026

./: README.md  newsletter.py  prompt2.py  pyproject.toml
