[project]
name = "newsletter-venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.6.14",
    "deepseek>=1.0.0",
    "groq>=1.4.0",
    "ollama>=0.6.2",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
